--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "expo-splash-screen": "~0.27.5",
-    "expo-font": "~12.0.9"
+    "expo-font": "~12.0.9",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
