--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.5",
+    "@clerk/types": "^4.19.0",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-font": "~12.0.9",
+    "expo-local-authentication": "^14.0.1",
+    "expo-secure-store": "^13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-splash-screen": "~0.27.5",
-    "expo-font": "~12.0.9",
-    "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
