build a server directly using API routes -> complete add user info to database

--- a/app.json
+++ b/app.json
@@ -30,12 +30,14 @@
     },
     "plugins": [
       [
-        "expo-font",
+
+        "expo-router",
         {
           "origin": "https://carbooking.dev/"
         }
-      ],
-      "expo-router"
+      ], 
+      "expo-font"
+
     ]
   }
 }
