--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "^14.0.1",
+    "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
@@ -36,8 +38,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-location": "~17.0.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
