--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-expo": "^2.2.5",
     "@clerk/types": "^4.19.0",
     "@expo/metro-runtime": "~3.2.3",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@neondatabase/serverless": "^0.9.5",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
@@ -38,7 +39,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
